--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "gojs": "^3.0.22",
     "localtunnel": "^2.0.2"
   }
